Added more entries to the ToC.

--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.ipynb
@@ -40,8 +40,23 @@
     "$$\\label{toc}$$\n",
     "\n",
     "1. [Step 1](#writec): Use NRPy+ to generate necessary C code to solve the scalar wave equation in curvilinear, singular coordinates\n",
-    "\n",
+    "    1. [Step 1.a](#mol_timestep): Use NRPy+ to generate the RK4 timestepping method\n",
+    "    1. [Step 1.b](#c_headers): Use NRPy+ to generate C headers\n",
+    "    1. [Step 1.c](#mol_timestep): Copy code over from the GiRaFFE C code library\n",
+    "    1. [Step 1.d](#initial_data): Import Alfv&eacute;n Wave initial data C function\n",
+    "    1. [Step 1.e](#poynting): Import densitized Poynting flux initial data conversion C function\n",
+    "    1. [Step 1.f](#rhs): Output GiRaFFE RHS expressions\n",
     "1. [Step 2](#mainc): `GiRaFFE_standalone.c`: The Main C Code\n",
+    "    1. [Step 2.a](#import_headers): Import needed header files\n",
+    "    1. [Step 2.b](#data_type): Set data type\n",
+    "    1. [Step 2.c](#free_params): Set free parameters\n",
+    "    1. [Step 2.d](#idx4): Declare the IDX4 macro\n",
+    "    1. [Step 2.e](#gridfuncs): Define gridfunctions\n",
+    "    1. [Step 2.f](#bcs): Boundary Conditions, the A-to-B driver, and the conservative-to-primitive solver\n",
+    "    1. [Step 2.g](#timestep): Find the CFL-constrained timestep\n",
+    "    1. [Step 2.h](#initial_data): Declare the function for the exact solution\n",
+    "    1. [Step 2.i](#rhsC): Declare the functions to evaluate the GRFFE RHSs\n",
+    "    1. [Step 2.j](#main): The `main()` function\n",
     "1. [Step 3](#convergence): Code validation: Verify that relative error in numerical solution converges to zero at the expected order\n",
     "1. [Step 4](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file\n"
    ]
@@ -86,10 +101,10 @@
     "import reference_metric as rfm\n",
     "\n",
     "#Step P2: Create C code output directory:\n",
-    "!rm -r ScalarWaveCurvilinear_Playground_Ccodes\n",
-    "import shutil, os\n",
-    "outdir = os.path.join(\"GiRaFFE_standalone_Ccodes/\")\n",
     "import cmdline_helper as cmd\n",
+    "import shutil, os\n",
+    "cmd.delete_existing_files(\"GiRaFFE_standalone_Ccodes/*\")\n",
+    "outdir = os.path.join(\"GiRaFFE_standalone_Ccodes/\")\n",
     "cmd.mkdir(outdir)\n",
     "\n",
     "# Set the finite differencing order to 4.\n",
@@ -117,6 +132,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='mol_timestep'></a>\n",
+    "\n",
+    "## Step 1.a: Use NRPy+ to generate the RK4 timestepping method \\[Back to [top](#toc)\\]\n",
+    "$$\\label{mol_timestep}$$\n",
+    "\n",
     "Next, we will we will use the `MoLtimestepping` module to write the code for our timestepping algorithm. Here, we will use it to write RK4, but note that by changing the variable `RK_method` we can easily and immediately use many other algorithms. \n",
     "\n",
     "It is also imperative to pass the correct strings `RHS_string` and `post_RHS_string`. *Any* functions that we want to call between each step need to be included here."
@@ -157,6 +177,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='c_headers'></a>\n",
+    "\n",
+    "## Step 1.b: Use NRPy+ to generate C headers \\[Back to [top](#toc)\\]\n",
+    "$$\\label{c_headers}$$\n",
+    "\n",
     "We will also need to output C header files that are related to the numerical grids and the coordinate system we set up using the reference metric. These end up as very simple files in Cartesian, but they will be more complex in other coordinate systems."
    ]
   },
@@ -190,7 +215,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are some important C codes that we have already written that are stored elsewhere. We will now copy them to our working directory."
+    "<a id='mol_timestep'></a>\n",
+    "\n",
+    "## Step 1.c: Copy code over from the GiRaFFE C code library \\[Back to [top](#toc)\\]\n",
+    "$$\\label{mol_timestep}$$\n",
+    "\n",
+    "There are some important C codes that we have already written that are stored elsewhere. We will now copy them to our working directory. More detail about these codes can be found here:\n",
+    "* [Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb](Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb)\n",
+    "* [Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb](Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb)\n",
+    "* [Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb](Tutorial-GiRaFFE_HO_C_code_library-BCs.ipynb)"
    ]
   },
   {
@@ -218,7 +251,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2A: Import Alfv&eacute;n Wave initial data C function\n",
+    "<a id='initial_data'></a>\n",
+    "\n",
+    "## Step 1.d: Import Alfv&eacute;n Wave initial data C function\n",
+    "$$\\label{initial_data}$$\n",
     "\n",
     "The [GiRaFFEfood_HO.GiRaFFEfood_HO_1D_tests.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_AlignedRotator.py) NRPy+ module does the following:\n",
     "\n",
@@ -285,7 +321,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2C: Import densitized Poynting flux initial data conversion C function\n",
+    "<a id='poynting'></a>\n",
+    "\n",
+    "## Step 1.e: Import densitized Poynting flux initial data conversion C function\n",
+    "$$\\label{poynting}$$\n",
     "\n",
     "The [GiRaFFEfood_HO.GiRaFFEfood_HO.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO.py) NRPy+ module does the following:\n",
     "\n",
@@ -330,7 +369,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3A: Output GiRaFFE RHS expressions"
+    "<a id='rhs'></a>\n",
+    "\n",
+    "## Step 1.f: Output GiRaFFE RHS expressions\n",
+    "$$\\label{rhs}$$\n"
    ]
   },
   {
@@ -591,6 +633,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='import_headers'></a>\n",
+    "\n",
+    "# Step 2.a: Import needed header files \\[Back to [top](#toc)\\]\n",
+    "$$\\label{import_headers}$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -619,11 +671,49 @@
     "#endif\n",
     "\n",
     "#include \"time.h\"\n",
-    "#include \"NGHOSTS.h\" // A NRPy+-generated file, which is set based on FD_CENTDERIVS_ORDER.\n",
+    "#include \"NGHOSTS.h\" // A NRPy+-generated file, which is set based on FD_CENTDERIVS_ORDER.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='data_type'></a>\n",
+    "\n",
+    "# Step 2.b: Set data type \\[Back to [top](#toc)\\]\n",
+    "$$\\label{data_type}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
     "// Step P2: Add needed #define's to set data type, the IDX4() macro, and the gridfunctions\n",
     "// Step P2a: set REAL=double, so that all floating point numbers are stored to at least ~16 significant digits.\n",
-    "#define REAL double\n",
+    "#define REAL double\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='free_params'></a>\n",
+    "\n",
+    "# Step 2.c: Set free parameters \\[Back to [top](#toc)\\]\n",
+    "$$\\label{free_params}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
     "// Step P3: Set free parameters\n",
     "// Step P3a: Free parameters for the numerical grid\n",
@@ -655,7 +745,26 @@
     "//const REAL mu_AW  = -0.5; // The wave speed of the Alfven wave\n",
     "#define mu_AW -0.5\n",
     "const REAL lbound = -0.1*sqrt(1-mu_AW*mu_AW); // The left -most edge of the wave: divide by the \n",
-    "const REAL rbound =  0.1*sqrt(1-mu_AW*mu_AW); // The right-most edge of the wave: Lorentz Factor\n",
+    "const REAL rbound =  0.1*sqrt(1-mu_AW*mu_AW); // The right-most edge of the wave: Lorentz Factor\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='idx4'></a>\n",
+    "\n",
+    "# Step 2.d: Declare the IDX4 macro \\[Back to [top](#toc)\\]\n",
+    "$$\\label{idx4}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
     "// Step P6: Declare the IDX4(gf,i,j,k) macro, which enables us to store 4-dimensions of\n",
     "//          data in a 1D array. In this case, consecutive values of \"i\" \n",
@@ -667,7 +776,26 @@
     "( (i) + Nxx_plus_2NGHOSTS[0] * ( (j) + Nxx_plus_2NGHOSTS[1] * ( (k) + Nxx_plus_2NGHOSTS[2] * (g) ) ) )\n",
     "#define IDX3(i,j,k) ( (i) + Nxx_plus_2NGHOSTS[0] * ( (j) + Nxx_plus_2NGHOSTS[1] * (k) ) )\n",
     "// Assuming idx = IDX3(i,j,k). Much faster if idx can be reused over and over:\n",
-    "#define IDX4pt(g,idx)   ( (idx) + (Nxx_plus_2NGHOSTS[0]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[2]) * (g) )\n",
+    "#define IDX4pt(g,idx)   ( (idx) + (Nxx_plus_2NGHOSTS[0]*Nxx_plus_2NGHOSTS[1]*Nxx_plus_2NGHOSTS[2]) * (g) )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='gridfuncs'></a>\n",
+    "\n",
+    "# Step 2.e: Define gridfunctions \\[Back to [top](#toc)\\]\n",
+    "$$\\label{gridfuncs}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
     "// Step P7: Set #define's for GRFFE gridfunctions. C code generated above\n",
     "#include \"boundary_conditions/gridfunction_defines.h\"\n",
@@ -682,16 +810,53 @@
     "    REAL xx1 = xx[1][i1];\n",
     "    REAL xx2 = xx[2][i2];\n",
     "#include \"boundary_conditions/xxCart.h\"\n",
-    "}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='bcs'></a>\n",
     "\n",
-    "// Step P8: Include basic functions needed to impose curvilinear\n",
-    "//          parity and boundary conditions.\n",
+    "# Step 2.f: Boundary Conditions, the A-to-B driver, and the conservative-to-primitive solver \\[Back to [top](#toc)\\]\n",
+    "$$\\label{bcs}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
+    "\n",
+    "// Step P8: Include basic functions needed to impose boundary conditions.\n",
     "//#include \"../CurviBoundaryConditions/curvilinear_parity_and_outer_boundary_conditions.h\"\n",
     "#include \"boundary_conditions/GiRaFFE_boundary_conditions.h\"\n",
     "\n",
     "// Step P8c: Import C files for the A-to-B driver and the conservative-to-primitive solver\n",
     "#include \"A2B/driver_AtoB.c\"\n",
-    "#include \"driver_conserv_to_prims_FFE.C\"\n",
+    "#include \"driver_conserv_to_prims_FFE.C\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='timestep'></a>\n",
+    "\n",
+    "# Step 2.g: Find the CFL-constrained timestep \\[Back to [top](#toc)\\]\n",
+    "$$\\label{timestep}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
     "// Step P9: Find the CFL-constrained timestep\n",
     "REAL find_timestep(const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3],REAL *xx[3], const REAL CFL_FACTOR) {\n",
@@ -706,7 +871,26 @@
     "    dsmin = MIN(dsmin,MIN(ds_dirn0,MIN(ds_dirn1,ds_dirn2)));\n",
     "  }\n",
     "  return dsmin*CFL_FACTOR;\n",
-    "}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='initial_data'></a>\n",
+    "\n",
+    "# Step 2.h: Declare the function for the exact solution \\[Back to [top](#toc)\\]\n",
+    "$$\\label{initial_data}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
     "// Step P10: Declare the function for the exact solution. time==0 corresponds to the initial data.\n",
     "void initial_data(const int Nxx_plus_2NGHOSTS[3],REAL *xx[3], REAL *out_gfs, REAL *aux_gfs) {\n",
@@ -743,9 +927,28 @@
     "    LOOP_REGION(0,Nxx_plus_2NGHOSTS[0],0,Nxx_plus_2NGHOSTS[1],0,Nxx_plus_2NGHOSTS[2]){\n",
     "#include \"GiRaFFEfood_HO_Stilde.h\"\n",
     "    }\n",
-    "}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='rhsC'></a>\n",
     "\n",
-    "// Step P11: Declare the function to evaluate the GRFFE RHSs\n",
+    "# Step 2.i: Declare the functions to evaluate the GRFFE RHSs \\[Back to [top](#toc)\\]\n",
+    "$$\\label{rhsC}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
+    "\n",
+    "// Step P11: Declare the functions to evaluate the GRFFE RHSs\n",
     "// Step P11a: Create the function to calculate u4upperZero:\n",
     "void calc_u0(const int Nxx_plus_2NGHOSTS[3],REAL *aux_gfs)\n",
     "{\n",
@@ -803,7 +1006,26 @@
     "            rhs_gfs[IDX4pt(PSI6PHIGF, idx)] = 0.0;\n",
     "        }\n",
     "    }\n",
-    "}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='main'></a>\n",
+    "\n",
+    "# Step 2.j: The `main()` function \\[Back to [top](#toc)\\]\n",
+    "$$\\label{main}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outdir/GiRaFFE_standalone.c\n",
     "\n",
     "// main() function:\n",
     "// Step 0: Read command-line input, set up grid structure, allocate memory for gridfunctions, set up coordinates\n",
