SEOBNR: found negative values when attempting to evaluate a square root; introduced absolute values in Hamstring.txt to avoid this.  It remains to rerun CSE.

--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -462,9 +462,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "global name 'Subs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-c5e4ddc7cc64>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mHad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_H_and_derivs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0msympy_expression\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msympy_cse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnumpy_expressions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcompute_dHdq\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mconstant_coeffs\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcompute_const_coeffs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/tyler/nrpytutorial/tylersplayground/sympy_expression.py\u001b[0m in \u001b[0;36msympy_cse\u001b[0;34m()\u001b[0m\n\u001b[1;32m    569\u001b[0m         \u001b[0minvonepluslogargprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0monepluslogargprm_x\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0monepluslogarg\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    570\u001b[0m         \u001b[0mlogTermsprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meta\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0monepluslogargprm_x\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monepluslogarg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0monepluslogarg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monepluslogarg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 571\u001b[0;31m         \u001b[0mdeltaUprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbulk\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlogTermsprm_x\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mbulkprm_x\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlogTerms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mSubs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_xi_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_xi_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_xi_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbulk\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlogTerms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    572\u001b[0m         \u001b[0mdeltaTprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeltaU\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mr2prm_x\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdeltaUprm_x\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mr2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    573\u001b[0m         \u001b[0mdeltaUUSCOREupt7prm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mk5l\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mloguprm_x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: global name 'Subs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Check if a file of partial derivative expressions has already been generated.\n",
     "# If not, generate them!\n",
