SEOBNR: update initial conditions routine to run with files from SEOBNR subdirectory.

--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -61,26 +61,29 @@
    "source": [
     "# Initial condition solver for the spinning effective one-body formulation\n",
     "# See https://arxiv.org/abs/gr-qc/0508067 Section IV A, which we refer to as BCD2006\n",
+    "#Import necessary NumPy, SciPy, and NRPy+ modules\n",
     "import numpy as np\n",
     "import os.path\n",
     "from scipy.optimize import root\n",
     "from scipy.interpolate import interp1d, interp2d\n",
     "from numpy.linalg import norm\n",
-    "import NQC_corrections as nqc\n",
-    "import nqc_interp as nqi\n",
+    "import SEOBNR.NQC_corrections as nqc\n",
+    "import SEOBNR.nqc_interp as nqi\n",
     "\n",
     "# Input variables: will eventually structure this module as a function with the following input parameters\n",
     "m1 = 10.\n",
     "m2 = 15.\n",
     "f = 20.\n",
-    "# We write the spin components separately rather than in a vector to make derivative CSE straightforward\n",
     "S1 = np.array([0.01, 0.02, -0.03])\n",
     "S2 = np.array([0.04, -0.05, 0.06])\n",
     "\n",
     "# Initial condtions are computed with tortoise = 0; we later convert momentum if necessary\n",
     "# See LALSuite's LALSimIMRSpinEOBInitialConditionsPrec.c Line 775 and the discussion\n",
-    "# preceeding Taracchini, et. al. 2012 (https://arxiv.org/abs/1202.0790) Equation (14)\n",
+    "# preceeding Equation (14) of Taracchini, et. al. 2012 (https://arxiv.org/abs/1202.0790)\n",
     "tortoise = 0\n",
+    "\n",
+    "# The following values are taken from LALSuite (see\n",
+    "# https://lscsoft.docs.ligo.org/lalsuite/lal/group___l_a_l_constants__h.html).\n",
     "\n",
     "# Euler–Mascheroni constant $\\gamma$\n",
     "gamma = 0.577215664901532860606512090082402431\n",
@@ -472,8 +475,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-c5e4ddc7cc64>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mHad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_H_and_derivs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0msympy_expression\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msympy_cse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mnumpy_expressions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcompute_dHdq\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mconstant_coeffs\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcompute_const_coeffs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/tyler/nrpytutorial/tylersplayground/sympy_expression.py\u001b[0m in \u001b[0;36msympy_cse\u001b[0;34m()\u001b[0m\n\u001b[1;32m    569\u001b[0m         \u001b[0minvonepluslogargprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0monepluslogargprm_x\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0monepluslogarg\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    570\u001b[0m         \u001b[0mlogTermsprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meta\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0monepluslogargprm_x\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monepluslogarg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0monepluslogarg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monepluslogarg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 571\u001b[0;31m         \u001b[0mdeltaUprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbulk\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlogTermsprm_x\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mbulkprm_x\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlogTerms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mSubs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_xi_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_xi_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_xi_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbulk\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlogTerms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    572\u001b[0m         \u001b[0mdeltaTprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeltaU\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mr2prm_x\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdeltaUprm_x\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mr2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    573\u001b[0m         \u001b[0mdeltaUUSCOREupt7prm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mk5l\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mloguprm_x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-10-6857d5f7abc4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mHad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_H_and_derivs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0mSEOBNR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msympy_expression\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msympy_cse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mSEOBNR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy_expressions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcompute_dHdq\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mSEOBNR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstant_coeffs\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcompute_const_coeffs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/tyler/nrpytutorial/SEOBNR/sympy_expression.py\u001b[0m in \u001b[0;36msympy_cse\u001b[0;34m()\u001b[0m\n\u001b[1;32m    569\u001b[0m         \u001b[0minvonepluslogargprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0monepluslogargprm_x\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0monepluslogarg\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    570\u001b[0m         \u001b[0mlogTermsprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meta\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0monepluslogargprm_x\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monepluslogarg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0monepluslogarg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monepluslogarg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 571\u001b[0;31m         \u001b[0mdeltaUprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbulk\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlogTermsprm_x\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mbulkprm_x\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlogTerms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mSubs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_xi_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_xi_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_xi_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbulk\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlogTerms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    572\u001b[0m         \u001b[0mdeltaTprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeltaU\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mr2prm_x\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdeltaUprm_x\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mr2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    573\u001b[0m         \u001b[0mdeltaUUSCOREupt7prm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mk5l\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mloguprm_x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: global name 'Subs' is not defined"
      ]
     }
@@ -481,13 +484,13 @@
    "source": [
     "# Check if a file of partial derivative expressions has already been generated.\n",
     "# If not, generate them!\n",
-    "if not os.path.isfile(\"numpy_expressions.py\"):\n",
-    "    import Hamiltonian_and_derivs as Had\n",
+    "if not os.path.isfile(\"SEOBNR/numpy_expressions.py\"):\n",
+    "    import SEOBNR.Hamiltonian_and_derivs as Had\n",
     "    Had.output_H_and_derivs()\n",
-    "    import sympy_expression as se\n",
+    "    import SEOBNR.sympy_expression as se\n",
     "    se.sympy_cse()\n",
-    "from numpy_expressions import compute_dHdq\n",
-    "from constant_coeffs import compute_const_coeffs\n",
+    "from SEOBNR.numpy_expressions import compute_dHdq\n",
+    "from SEOBNR.constant_coeffs import compute_const_coeffs\n",
     "\n",
     "KK, c0k2, c1k2, c0k3, c1k3, c0k4, c1k4, c2k4, c0k5, c1k5, c2k5, k0, k1, k2, k3, k4, k5, k5l, d1, d1v2, dheffSS, dheffSSv2 = compute_const_coeffs(eta,gamma,a)\n",
     "\n",
