--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -57,7 +57,15 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm: cannot remove 'SEOBNR_Playground_Pycodes': No such file or directory\r\n"
+     ]
+    }
+   ],
    "source": [
     "# Initial condition solver for the spinning effective one-body formulation\n",
     "# See https://arxiv.org/abs/gr-qc/0508067 Section IV A, which we refer to as BCD2006\n",
@@ -69,6 +77,13 @@
     "from numpy.linalg import norm\n",
     "import SEOBNR.NQC_corrections as nqc\n",
     "import SEOBNR.nqc_interp as nqi\n",
+    "\n",
+    "# Create Python code output directory:\n",
+    "!rm -r SEOBNR_Playground_Pycodes\n",
+    "import shutil, os\n",
+    "outdir = os.path.join(\"SEOBNR_Playground_Pycodes/\")\n",
+    "import cmdline_helper as cmd\n",
+    "cmd.mkdir(outdir)\n",
     "\n",
     "# Input variables: will eventually structure this module as a function with the following input parameters\n",
     "m1 = 10.\n",
@@ -475,7 +490,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-6857d5f7abc4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mHad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_H_and_derivs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0mSEOBNR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msympy_expression\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msympy_cse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mSEOBNR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy_expressions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcompute_dHdq\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mSEOBNR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstant_coeffs\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcompute_const_coeffs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-10-a852094e822b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mHad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_H_and_derivs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mimport\u001b[0m \u001b[0mSEOBNR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msympy_expression\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msympy_cse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mSEOBNR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy_expressions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcompute_dHdq\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mSEOBNR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstant_coeffs\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcompute_const_coeffs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/home/tyler/nrpytutorial/SEOBNR/sympy_expression.py\u001b[0m in \u001b[0;36msympy_cse\u001b[0;34m()\u001b[0m\n\u001b[1;32m    569\u001b[0m         \u001b[0minvonepluslogargprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0monepluslogargprm_x\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0monepluslogarg\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    570\u001b[0m         \u001b[0mlogTermsprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meta\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0monepluslogargprm_x\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monepluslogarg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0monepluslogarg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0monepluslogarg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 571\u001b[0;31m         \u001b[0mdeltaUprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbulk\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlogTermsprm_x\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mbulkprm_x\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlogTerms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mSubs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_xi_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_xi_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_xi_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbulk\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlogTerms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    572\u001b[0m         \u001b[0mdeltaTprm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdeltaU\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mr2prm_x\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdeltaUprm_x\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mr2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    573\u001b[0m         \u001b[0mdeltaUUSCOREupt7prm_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mk5l\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mloguprm_x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: global name 'Subs' is not defined"
      ]
@@ -484,7 +499,7 @@
    "source": [
     "# Check if a file of partial derivative expressions has already been generated.\n",
     "# If not, generate them!\n",
-    "if not os.path.isfile(\"SEOBNR/numpy_expressions.py\"):\n",
+    "if not os.path.isfile(\"SEOBNR_Playground_Pycodes/numpy_expressions.py\"):\n",
     "    import SEOBNR.Hamiltonian_and_derivs as Had\n",
     "    Had.output_H_and_derivs()\n",
     "    import SEOBNR.sympy_expression as se\n",
