--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "# Initial condition solver for the spinning effective one-body formulation\n",
     "# See https://arxiv.org/abs/gr-qc/0508067 Section IV A, which we refer to as BCD2006\n",
-    "#Import necessary NumPy, SciPy, and NRPy+ modules\n",
+    "# Import necessary NumPy, SymPy, and SEOBNR modules\n",
     "import numpy as np\n",
     "import os.path\n",
     "from scipy.optimize import root\n",
@@ -70,7 +70,7 @@
     "import SEOBNR.NQC_corrections as nqc\n",
     "import SEOBNR.nqc_interp as nqi\n",
     "\n",
-    "# Create Python code output directory:\n",
+    "# For testing, remove numpy and sympy expression files\n",
     "!rm -r SEOBNR_Playground_Pycodes\n",
     "import shutil, os\n",
     "outdir = os.path.join(\"SEOBNR_Playground_Pycodes/\")\n",
@@ -91,9 +91,8 @@
     "# preceeding Equation (14) of Taracchini, et. al. 2012 (https://arxiv.org/abs/1202.0790)\n",
     "tortoise = 0\n",
     "\n",
-    "# The following values are taken from LALSuite (see\n",
+    "# The values of the following constants are from LALSuite (see LALSuite documentation at\n",
     "# https://lscsoft.docs.ligo.org/lalsuite/lal/group___l_a_l_constants__h.html).\n",
-    "\n",
     "# Euler–Mascheroni constant $\\gamma$\n",
     "gamma = 0.577215664901532860606512090082402431\n",
     "# Geomtrized solar mass $\\mathcal{M}_{\\odot}$\n",
@@ -474,9 +473,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SEOBNR_Playground_Pycodes/numpy_expressions.py:76: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  expnu = np.sqrt(deltaT*rho2invLamb)\n",
+      "SEOBNR_Playground_Pycodes/numpy_expressions.py:93: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  B = np.sqrt(deltaT)\n",
+      "SEOBNR_Playground_Pycodes/numpy_expressions.py:95: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  sqrtdeltaR = np.sqrt(deltaR)\n",
+      "SEOBNR_Playground_Pycodes/numpy_expressions.py:147: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  Hns = np.sqrt(Hnspt2*invLamb)+invLamb*Hnspt1\n",
+      "SEOBNR_Playground_Pycodes/numpy_expressions.py:366: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  Htmp101 = np.sqrt(Htmp49)\n",
+      "SEOBNR_Playground_Pycodes/numpy_expressions.py:368: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  Htmp103 = np.sqrt(Htmp77)\n",
+      "SEOBNR_Playground_Pycodes/numpy_expressions.py:383: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  Htmp118 = np.sqrt(Htmp63)\n",
+      "SEOBNR_Playground_Pycodes/numpy_expressions.py:406: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  Hreal = np.sqrt(Htmp58*(Htmp100*Htmp47*Htmp66*Htmp79*Htmp98*(-Htmp102 + Htmp105) + Htmp103*Htmp134*Htmp140*(-Htmp103*Htmp109*Htmp124*Htmp125*Htmp127*Htmp128*Htmp28*Htmp53 + Htmp11*Htmp118*(Htmp102*(Htmp102*Htmp114*(-Htmp136*Htmp137 + Htmp139 + Htmp99*(-Htmp135*Htmp138 + Htmp137*(Htmp127*Htmp136 - Htmp136) + Htmp139)) + Htmp115*Htmp116*Htmp124*Htmp135) - 1.0*Htmp105*Htmp111*Htmp116*Htmp122*Htmp47*(-Htmp120*Htmp131 + Htmp120 - Htmp129/2 - Htmp130/2)))/(Htmp112*Htmp78) + Htmp118*Htmp123*Htmp140*(Htmp48*Htmp55 + Htmp80*(-4*Htmp11*Htmp22 + Htmp133*Htmp54))*(-Htmp1*Htmp104*Htmp114*Htmp128*Htmp70 + Htmp110*Htmp116 + Htmp50*Htmp53*(-Htmp0*Htmp116*Htmp62*Htmp63 + Htmp109*Htmp117*Htmp119 + Htmp113*Htmp116))/2 - Htmp121*Htmp123*Htmp14**(3/2)*Htmp51*(-Htmp0*Htmp101*Htmp119*(Htmp101*Htmp116*Htmp117 - Htmp114*Htmp115) + Htmp109*(-Htmp110 + Htmp50*(-Htmp113*Htmp53 + Htmp71))) + Htmp2*eta*(dheffSS*(Htmp10*Htmp9 + Htmp3*Htmp6 + Htmp7*Htmp8) + dheffSSv2)*(s1x**2 + s1y**2 + s1z**2 + s2x**2 + s2y**2 + s2z**2) + Htmp29*(Htmp109*(3*Htmp106 + 3*Htmp107 + 3*Htmp108)/2 - Htmp95**2/2 - Htmp96**2/2 - Htmp97**2/2) + Htmp47*Htmp48*Htmp57 + Htmp79*np.sqrt(Htmp77*(Htmp23*Htmp38**4*Htmp39**4*Htmp58*(4 - 3*eta) + Htmp76)) + Htmp80*Htmp98 - 1) + 1)\n",
+      "SEOBNR_Playground_Pycodes/numpy_expressions.py:563: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  tmp156 = np.sqrt(Hnspt2*invLamb)/Hnspt2\n",
+      "SEOBNR_Playground_Pycodes/numpy_expressions.py:565: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  tmp158 = tmp103*np.sqrt(deltaT*rho2invLamb)/rho2invLamb\n",
+      "SEOBNR_Playground_Pycodes/numpy_expressions.py:624: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  tmp217 = np.sqrt(deltaT)\n",
+      "SEOBNR_Playground_Pycodes/numpy_expressions.py:640: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  tmp233 = 1/np.sqrt(deltaR)\n"
+     ]
+    }
+   ],
    "source": [
     "# Check if a file of partial derivative expressions has already been generated.\n",
     "# If not, generate them!\n",
@@ -485,7 +515,7 @@
     "    Had.output_H_and_derivs()\n",
     "    import SEOBNR_Playground_Pycodes.sympy_expression as se\n",
     "    se.sympy_cse()\n",
-    "from SEOBNR.numpy_expressions import compute_dHdq\n",
+    "from SEOBNR_Playground_Pycodes.numpy_expressions import compute_dHdq\n",
     "from SEOBNR.constant_coeffs import compute_const_coeffs\n",
     "\n",
     "KK, c0k2, c1k2, c0k3, c1k3, c0k4, c1k4, c2k4, c0k5, c1k5, c2k5, k0, k1, k2, k3, k4, k5, k5l, d1, d1v2, dheffSS, dheffSSv2 = compute_const_coeffs(eta,gamma,a)\n",
@@ -549,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -936,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,9 +991,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "global name 'dHdp1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-082c9824ddef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Import second derivatives of H from another function/routine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdHdpphi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdHdp1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0momega\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0md2Hdr2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0md2Hdrdpphi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: global name 'dHdp1' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Import second derivatives of H from another function/routine\n",
     "dHdpphi = dHdp1/r[0] - omega\n",
