--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-opt.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-opt.ipynb
@@ -572,9 +572,9 @@
     "        params.AMAX   =  domain_size;\\n\"\"\"\n",
     "    elif CoordSystem == \"Cartesian\":\n",
     "        coordparams += \"\"\"\n",
-    "        params.xmin = -domain_size, xmax = domain_size;\n",
-    "        params.ymin = -domain_size, ymax = domain_size;\n",
-    "        params.zmin = -domain_size, zmax = domain_size;\\n\"\"\"\n",
+    "        params.xmin = -domain_size, params.xmax = domain_size;\n",
+    "        params.ymin = -domain_size, params.ymax = domain_size;\n",
+    "        params.zmin = -domain_size, params.zmax = domain_size;\\n\"\"\"\n",
     "    elif CoordSystem == \"Cylindrical\":\n",
     "        coordparams += \"\"\"\n",
     "        params.ZMIN   = -domain_size;\n",
