--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
@@ -306,9 +306,9 @@
     "        params.AMAX   =  domain_size;\\n\"\"\"\n",
     "    elif CoordSystem == \"Cartesian\":\n",
     "        coordparams += \"\"\"\n",
-    "        params.xmin = -domain_size, xmax = domain_size;\n",
-    "        params.ymin = -domain_size, ymax = domain_size;\n",
-    "        params.zmin = -domain_size, zmax = domain_size;\\n\"\"\"\n",
+    "        params.xmin = -domain_size, params.xmax = domain_size;\n",
+    "        params.ymin = -domain_size, params.ymax = domain_size;\n",
+    "        params.zmin = -domain_size, params.zmax = domain_size;\\n\"\"\"\n",
     "    elif CoordSystem == \"Cylindrical\":\n",
     "        coordparams += \"\"\"\n",
     "        params.ZMIN   = -domain_size;\n",
@@ -679,14 +679,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWaveCurvilinear_Playground_Ccodes/ScalarWaveCurvilinear_Playground-SIMD.c -o ScalarWaveCurvilinear_Playground-SIMD -lm`...\n",
-      "Finished executing in 1.6302959919 seconds.\n",
+      "Finished executing in 1.83333110809 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3,4,5 ./ScalarWaveCurvilinear_Playground-SIMD 16  8 16`...\n",
-      "Finished executing in 0.230481147766 seconds.\n",
+      "Finished executing in 0.224708080292 seconds.\n",
       "Executing `taskset -c 0,1,2,3,4,5 ./ScalarWaveCurvilinear_Playground-SIMD 24 12 24`...\n",
-      "Finished executing in 0.628969907761 seconds.\n",
+      "Finished executing in 0.627304077148 seconds.\n",
       "Executing `taskset -c 0,1,2,3,4,5 ./ScalarWaveCurvilinear_Playground-SIMD 48 24 48`...\n",
-      "Finished executing in 17.5154960155 seconds.\n"
+      "Finished executing in 17.1096270084 seconds.\n"
      ]
     }
    ],
@@ -812,6 +812,8 @@
     "                          # relative error at t=0 could be -inf or about -16, \n",
     "                          # resulting in very different-looking plots \n",
     "                          # despite the data being the same to roundoff.\n",
+    "if par.parval_from_str(\"reference_metric::CoordSystem\") == \"Cartesian\":\n",
+    "    ax.set_ylim([-2.68,-1.62])\n",
     "if par.parval_from_str(\"reference_metric::CoordSystem\") == \"Cylindrical\":\n",
     "    ax.plot(first_col16, second_col16_rescaled5o, 'k.',  label='(Assuming 5th-order convergence)')\n",
     "legend = ax.legend(loc='lower right', shadow=True, fontsize='large')\n",
@@ -842,9 +844,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb to latex\n",
-      "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt_files/\n",
-      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt_files\n",
-      "[NbConvertApp] Writing 89459 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.tex\n",
+      "[NbConvertApp] Writing 88431 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
