reference_metric: Properly normalize SinhSymTP. Updated SinhSymTP trusted_values_dict.

--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-opt.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide-opt.ipynb
@@ -566,10 +566,12 @@
     "        params.SINHW=  sinh_width;\\n\"\"\"\n",
     "        if CoordSystem == \"SinhSphericalv2\":\n",
     "            coordparams += \"        params.const_dr = sinhv2_const_dr;\\n\"\n",
-    "    elif CoordSystem == \"SymTP\":\n",
+    "    elif \"SymTP\" in CoordSystem:\n",
     "        coordparams += \"\"\"\n",
     "        params.bScale =  SymTP_bScale;\n",
     "        params.AMAX   =  domain_size;\\n\"\"\"\n",
+    "        if CoordSystem == \"SinhSymTP\":\n",
+    "            coordparams += \"        params.SINHWAA = sinh_width;\\n\"\n",
     "    elif CoordSystem == \"Cartesian\":\n",
     "        coordparams += \"\"\"\n",
     "        params.xmin = -domain_size, params.xmax = domain_size;\n",
