NRPy+ intro modules: update to latest revision

--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
@@ -239,9 +239,15 @@
      "output_type": "stream",
      "text": [
       "Wrote to file \"ScalarWaveCurvilinear_Playground_Ccodes/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
+      "hey 2.b\n",
       "Evolved gridfunction \"uu\" has parity type 0.\n",
       "Evolved gridfunction \"vv\" has parity type 0.\n",
-      "Wrote to file \"ScalarWaveCurvilinear_Playground_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n"
+      "hey 2.c\n",
+      "hey 3\n",
+      "hey 4\n",
+      "Wrote to file \"ScalarWaveCurvilinear_Playground_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n",
+      "hey 5.b\n",
+      "hey 6 done\n"
      ]
     }
    ],
@@ -681,14 +687,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWaveCurvilinear_Playground_Ccodes/ScalarWaveCurvilinear_Playground-SIMD.c -o ScalarWaveCurvilinear_Playground-SIMD -lm`...\n",
-      "Finished executing in 2.02987217903 seconds.\n",
+      "Finished executing in 1.82912302017 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3,4,5 ./ScalarWaveCurvilinear_Playground-SIMD 16  8 16`...\n",
-      "Finished executing in 0.223143815994 seconds.\n",
+      "Finished executing in 0.23056101799 seconds.\n",
       "Executing `taskset -c 0,1,2,3,4,5 ./ScalarWaveCurvilinear_Playground-SIMD 24 12 24`...\n",
-      "Finished executing in 1.62698507309 seconds.\n",
+      "Finished executing in 0.829140901566 seconds.\n",
       "Executing `taskset -c 0,1,2,3,4,5 ./ScalarWaveCurvilinear_Playground-SIMD 48 24 48`...\n",
-      "Finished executing in 60.261330843 seconds.\n"
+      "Finished executing in 19.7157349586 seconds.\n"
      ]
     }
    ],
@@ -846,7 +852,9 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb to latex\n",
-      "[NbConvertApp] Writing 89423 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.tex\n",
+      "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt_files/\n",
+      "[NbConvertApp] Making directory Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt_files\n",
+      "[NbConvertApp] Writing 90231 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
