--- a/Tutorial-Indexed_Expressions.ipynb
+++ b/Tutorial-Indexed_Expressions.ipynb
@@ -447,7 +447,8 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Indexed_Expressions.ipynb to latex\n",
-      "[NbConvertApp] Writing 40302 bytes to Tutorial-Indexed_Expressions.tex\n",
+      "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 10, column 1)\n",
+      "[NbConvertApp] Writing 34516 bytes to Tutorial-Indexed_Expressions.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -471,21 +472,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
