--- a/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
@@ -179,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellID/src/InitialData.c\n"
+      "Writing MaxwellID/src/InitialData.c\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellID/interface.ccl\n"
+      "Writing MaxwellID/interface.ccl\n"
      ]
     }
    ],
@@ -260,7 +260,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellID/param.ccl\n"
+      "Writing MaxwellID/param.ccl\n"
      ]
     }
    ],
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellID/schedule.ccl\n"
+      "Writing MaxwellID/schedule.ccl\n"
      ]
     }
    ],
@@ -367,7 +367,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting MaxwellID/src/make.code.defn\n"
+      "Writing MaxwellID/src/make.code.defn\n"
      ]
     }
    ],
@@ -399,7 +399,8 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb to latex\n",
-      "[NbConvertApp] Writing 51276 bytes to Tutorial-ETK_thorn-IDMaxwellNRPy.tex\n",
+      "[pandoc warning] Duplicate link reference `[comment]' \"source\" (line 8, column 1)\n",
+      "[NbConvertApp] Writing 42922 bytes to Tutorial-ETK_thorn-IDMaxwellNRPy.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -423,21 +424,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
